[project]
name = "yamlgator"
version = "0.1.0"
description = ""
authors = [
    {name = "d4g33z",email = "jeff@du.local"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
